--- a/res/layout/main_menu.xml
+++ b/res/layout/main_menu.xml
@@ -28,13 +28,13 @@
         android:text="@string/app_name"
         android:textSize="21sp"
         android:textStyle="bold" />
-	
+
     <TextView
         android:id="@+id/version_text"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="1.4.3 (1072)"
+        android:text=""
         android:textSize="10sp" />
 
     <TextView
@@ -59,7 +59,19 @@
 
             <View
                 android:layout_width="fill_parent"
-                android:layout_height="10dp" />
+                android:layout_height="10dp"
+                android:id="@+id/initial_data_spacer" />
+            
+            <Button
+                android:id="@+id/initial_data"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:textSize="21sp" />
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="5dp" />
 
             <Button
                 android:id="@+id/enter_data"
