--- a/res/layout/splash_screen.xml
+++ b/res/layout/splash_screen.xml
@@ -8,53 +8,53 @@
 	android:id="@+id/layout"
 	android:orientation="vertical"
 	android:padding="10dip">
-	<ImageView
-		android:id="@+id/splash"
-		android:gravity="center"
-		android:contentDescription="@string/app_name"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:background="@android:color/transparent"
-		android:padding="0dip"
-		android:visibility="gone" />
+
+   <ImageView
+       android:id="@+id/splash"
+       android:gravity="center"
+       android:contentDescription="@string/app_name"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:background="@android:color/transparent"
+       android:padding="0dip"
+       android:visibility="gone" />
 	<LinearLayout
 		android:id="@+id/splash_default"
-		android:orientation="horizontal"
+		android:orientation="vertical"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:gravity="center_vertical|center_horizontal"
 		android:paddingBottom="5dip">
+
 		<ImageView
-			android:id="@+id/app_icon"
-			android:src="@drawable/logo"
-			android:contentDescription="@string/app_name"
-			android:layout_height="72dip"
-			android:layout_width="72dip" />
-		<LinearLayout
-			android:orientation="vertical"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:gravity="center_vertical|left"
-			android:paddingBottom="5dip">
+		    android:id="@+id/app_icon"
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    android:contentDescription="@string/app_name"
+		    android:src="@drawable/doh_logo_large" />
+
 			<TextView
 				android:id="@+id/text"
 				android:text="@string/app_name"
 				android:layout_width="fill_parent"
-				android:layout_height="fill_parent"
+				android:layout_height="wrap_content"
 				android:background="@android:color/transparent"
+				android:gravity="center_horizontal"
 				android:textSize="22sp"
 				android:textStyle="bold"
 				android:paddingLeft="7dip"
 				android:paddingRight="7dip" />
+			
 			<TextView
-				android:id="@+id/url"
-				android:text="@string/app_url"
+				android:id="@+id/description"
+				android:text="@string/splash_description"
 				android:layout_width="fill_parent"
-				android:layout_height="fill_parent"
+				android:layout_height="wrap_content"
+				android:gravity="center_horizontal"
 				android:background="@android:color/transparent"
-				android:textSize="14sp"
+				android:textSize="18sp"
 				android:paddingLeft="7dip"
 				android:paddingRight="7dip" />
-		</LinearLayout>
 	</LinearLayout>
+
 </LinearLayout>
